--- a/package.json
+++ b/package.json
@@ -12,5 +12,17 @@
         "laravel-vite-plugin": "^0.8.0",
         "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.13.0",
+        "@emotion/styled": "^11.13.0",
+        "@mui/material": "^5.16.6",
+        "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+        "@mui/x-date-pickers": "^7.12.0",
+        "dayjs": "^1.11.12",
+        "flowbite": "^2.4.1",
+        "react": "^17.0.0 || ^18.0.0",
+        "react-dom": "^17.0.0 || ^18.0.0",
+        "styled-components": "^6.1.12"
     }
 }
